[tool.poetry]
name = "jupyterlite-langdb"
version = "0.1.0"
description = ""
authors = ["VG <vivekg342@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
jupyterlite-core = "0.3.0"
jupyterlab = ">=4.1.6,<4.2.0"
notebook = ">=7.1.2,<7.2.0"
langdb-kernel-lite = { path = "./packages/langdb-kernel-lite", develop = true }
langdb-files = { path = "./packages/langdb-files", develop = true }
langdb-tours = { path = "./packages/langdb-tours", develop = true }
jupyterlite-pyodide-kernel = "0.3.1"
jupyterlite-javascript-kernel = "0.3.0"
ipywidgets = ">=8.1.1,<9"
ipyevents = ">=2.0.1"
ipympl = ">=0.8.2"
ipycanvas = ">=0.9.1"
ipyleaflet = "^0.19.1"
plotly = ">=5,<6"
bqplot = "^0.12.43"
pydantic = "<2"
pyyaml = "^6.0.1"
pyyaml-include = "^2.1"
yaml-include = "^1.0.0"
jupyterlab-tour = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
